tests/baselines/reference/instantiateConstraintsToTypeArguments2.errors.txt
==== tests/cases/compiler/instantiateConstraintsToTypeArguments2.ts (4 errors) ====
    interface A<T extends A<T, S>, S extends A<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! instantiateConstraintsToTypeArguments2.ts(1,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~~
!!! instantiateConstraintsToTypeArguments2.ts(1,32): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface B<T extends B<T, S>, S extends B<T, S>> extends A<B<T, S>, B<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! instantiateConstraintsToTypeArguments2.ts(2,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~~
!!! instantiateConstraintsToTypeArguments2.ts(2,32): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.